--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,8 @@ dependencies:
   flutter:
     sdk: flutter
 
-
+  shared_preferences: ^2.2.2
+  smooth_page_indicator: ^1.1.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0 # Needed for initialization in Flutter
   path_provider: ^2.0.11 # To find a safe place on the device to store the database
